--- a/XritoMod.csproj
+++ b/XritoMod.csproj
@@ -33,7 +33,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="**\*.cs" />
+    <Compile Include="ClickerGUI.cs" />
+    <Compile Include="Items\ClickerAccess.cs" />
+    <Compile Include="Items\RemoteSundial.cs" />
+    <Compile Include="Tiles\ClickerAccess.cs" />
+    <Compile Include="UI\UIUpgradeButton.cs" />
+    <Compile Include="UI\UIUtil.cs" />
+    <Compile Include="XritoMod.cs" />
+    <Compile Include="XritoPlayer.cs" />
+    <Compile Include="XritoWorld.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
@@ -57,11 +65,8 @@
       <HintPath>D:\Applications\Steam\steamapps\common\Terraria\Terraria.exe</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UIElements\" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"D:\Applications\Steam\steamapps\common\Terraria\Terraria.exe" -build "$(ProjectDir)\" -eac "$(TargetPath)"</PostBuildEvent>
+    <PostBuildEvent>"D:\Applications\Steam\steamapps\common\Terraria\tModLoaderServer.exe" -build "$(ProjectDir)\" -eac "$(TargetPath)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
